--- a/Atividade 3/index.html
+++ b/Atividade 3/index.html
@@ -73,7 +73,7 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
     </div>
 
     <footer>
-        Atividade de Pweb - Professora Denilce De Almeida Oliveira Veloso || 2021 &copy; Fatec Sorocaba
+        Atividade de Pweb - Professora Denilce De Almeida Oliveira Veloso || Fatec Sorocaba &copy; 2021
     </footer>
 
 </body>
