Adicionando meta tag descrição

--- a/Atividade 3/index.html
+++ b/Atividade 3/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Atividade 3 da aula de Pweb">
     <link rel="shortcut icon" href="./favicon.ico">
     <title>Design Responsivo</title>
    
@@ -23,6 +24,8 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
         <h1>Design responsivo</h1>
         <p>Atividade 3 de Progrmação Web</p>
     </header>
+
+    
 
     <!-- Texto -->
     <div id="main-article">
