--- a/Atividade 3/index.html
+++ b/Atividade 3/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Questrial&display=swap" rel="stylesheet">
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Design responsivo</title>
 </head>
 <body>
     <div id="Top"></div>
