--- a/Atividade 4/index.html
+++ b/Atividade 4/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
@@ -117,7 +118,7 @@
 
 <section id="criancas-fantasmas">
     <div class="title">
-       <h2> Conheça as crianças fantasma...</h2>
+       <h2  data-aos="fade-down"> Conheça as crianças fantasma...</h2>
     </div>
     <div class="criancas">
     <img src="./tumblr_7b92ed4917ba03c6bc86cbd1511c20b7_2a76e06d_2048.png" alt="">
