--- a/Atividade 4/index.html
+++ b/Atividade 4/index.html
@@ -13,9 +13,12 @@
     <title>Coraline e o mundo secreto</title>
 </head>
 <body>
+ 
     <!-- Cabeçalho -->
     <header>
-        
+        <audio preload="metadata" autoplay id="musica" volume="5">
+            <source src="./01 End Credits.mp3" type="audio/mpeg">
+        </audio>
         <div class="sky">
             <div class="layer"></div>
             <div class="caption" data-aos="fade-up">
@@ -90,7 +93,7 @@
       </div>
 
 </section>
-
+ <!-- Circo dos ratinhos -->
 <section id="Siga">
 
     <h2 data-aos="fade-down">Acompanhe os ratinhos para o circo do senhor Bobinsky...</h2>
@@ -115,7 +118,7 @@
 
 
 </section>
-
+ <!-- Crianças fantasma -->
 <section id="criancas-fantasmas">
     <div class="title">
        <h2  data-aos="fade-down"> Conheça as crianças fantasma...</h2>
@@ -126,6 +129,8 @@
     <img src="./tumblr_8da2892f869bbb6b418e9c4c09fb823b_f01a3ab3_2048.png" alt="">
     </div>
 </section>
+
+
 
 <!-- Footer -->
 <footer>
