--- a/Atividade 4/index.html
+++ b/Atividade 4/index.html
@@ -87,7 +87,7 @@
 
 <!-- Seção porta para o outro mundo -->
 <section id="porta">
-    <h2 data-aos="fade-down">Abra a porta para o outro mundo... </h2>
+    <h2 data-aos="fade-down">Clique na porta e abra o portal para o outro mundo... </h2>
     <div class="backDoor">
         <div class="door"></div>
       </div>
