--- a/Atividade 5/html/about.html
+++ b/Atividade 5/html/about.html
@@ -24,7 +24,7 @@
       </div>
       <ul>
         
-         <li> <a href="index.html" >Home</a></li>
+         <li> <a href="../index.html" >Home</a></li>
         <li> <a href="about.html" class="current">Sobre nós</a></li>
         
       </ul>
