--- a/Atividade 5/html/about.html
+++ b/Atividade 5/html/about.html
@@ -74,7 +74,7 @@ Isso tem sido verdade desde que Johannes Gutenberg introduziu a impressão na Eu
             <aside class=" card bg-primary">
                 <h2>Inscreva-se</h2>
                 <p>Inscreva-se em nosso clube!</p>
-                <a href="#" class="btn btn-dark btn-block">Inscreva-se</a>
+                <a href="#" class="btn btn-dark btn-block" >Inscreva-se</a>
             </aside>
 
            
@@ -95,7 +95,7 @@ Isso tem sido verdade desde que Johannes Gutenberg introduziu a impressão na Eu
     <p>Receba as novidades em primeira mão!</p>
 
 <form><input type="email" placeholder="Digite seu email...">
-  <input type="submit" value="Inscreva-se!" class="btn btn-primary">
+  <input type="submit" value="Inscreva-se!" class="btn btn-primary"id=">
 </form></div>
 <div>
   <h3>Site links</h3>
@@ -109,7 +109,7 @@ Isso tem sido verdade desde que Johannes Gutenberg introduziu a impressão na Eu
 <div>
   <h2>Inscreva-se!</h2>
   <p>Fique por dentro das notícias de Albuquerque</p>
-  <a href="#" class="btn btn-secondary">Inscreva-se</a>
+  <a href="" class="btn btn-secondary">Inscreva-se</a>
   </div>
 <div>
   Copyright &copy; 2021, All Rights Reserved
@@ -117,4 +117,5 @@ Isso tem sido verdade desde que Johannes Gutenberg introduziu a impressão na Eu
 </footer>
 
 </body>
+<script src="../js/app.js"></script>
 </html>
