--- a/Atividade 5/index.html
+++ b/Atividade 5/index.html
@@ -148,7 +148,7 @@
 <div>
   <h2>Inscreva-se!</h2>
   <p>Fique por dentro das notícias de Albuquerque</p>
-  <a href="#" class="btn btn-secondary">Inscreva-se</a>
+  <a href="#"  class="btn btn-secondary">Inscreva-se</a>
   </div>
 <div>
   Copyright &copy; 2021, All Rights Reserved
@@ -156,4 +156,6 @@
 </footer>
 
 </body>
+
+<script src="./js/app.js"></script>
 </html>
