--- a/Atividade 5/html/article.html
+++ b/Atividade 5/html/article.html
@@ -94,7 +94,7 @@
     <p>Receba as novidades em primeira mão!</p>
 
 <form><input type="email" placeholder="Digite seu email...">
-  <input type="submit" value="Inscreva-se!"  class="btn btn-primary">
+  <input type="submit" value="Inscreva-se!" class="btn btn-primary">
 </form></div>
 <div>
   <h3>Site links</h3>
@@ -108,12 +108,13 @@
 <div>
   <h2>Inscreva-se!</h2>
   <p>Fique por dentro das notícias de Albuquerque</p>
-  <a href="" class="btn btn-secondary"  >Inscreva-se</a>
+  <a href="#"  class="btn btn-secondary">Inscreva-se</a>
   </div>
 <div>
   Copyright &copy; 2021, All Rights Reserved
 </div>
 </footer>
+
 
 </body>
 <script src="../js/app.js"></script>
