--- a/Atividade 11/index.html
+++ b/Atividade 11/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Atividade 11</title>
 </head>
 <body>
     
+    <div id="text"></div>
+    <div id="text2"></div>
 </body>
 <script src="index.js"></script>
 </html>
