--- a/Atividade 14/index.html
+++ b/Atividade 14/index.html
@@ -23,7 +23,10 @@
         <!-- Form pra valer -->
         <div class="form">
           <h2 class="form-title">Formulário principal</h2>
-          <form action="">
+          <form
+            action="https://formsubmit.co/nady.n.m.c@gmail.com"
+            method="POST"
+          >
             <div class="form-control">
               <!-- campo nome -->
               <label for="nome">Nome</label>
